--- a/ADOPT-ME/src/index.html
+++ b/ADOPT-ME/src/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root">Not rendered</div>
+    <div id="modal"></div>
 
+    <div id="root">Not rendered</div>
     <script type="module" src="./App.jsx"></script>
   </body>
 </html>
